# tt-splat

./: .env.example  .gitignore  FEASIBILITY.md  README.md  bench_ab.sh  pyproject.toml
config/: defaults.toml
docs/: ALGORITHM.md  GAME_ENGINE_PLAN.md  PERF_LOCALITY_PLAN.md  PROGRESS.md  PROJECTION_FUSION_PLAN.md  RECIPE_GAPS_PLAN.md  ROADMAP.md  SCALE_CAMPAIGN_PLAN.md  SESSION_2026-06-26_perf.md  adam_cartoon.html  algorithm_anim.html  controls.html  pipeline_cartoon.html
docs/pathclear/: device_train_loop.py  gaussian2d_image.py  m17_fused_backward.py  m2_local_accum.py  power_ramp.py  prepare_data.py  sfpu_blend.py  sfpu_raster_scaled.py  train2d.py  train_real.py
pathclear/: bin_sort.py  colmap_ingest.py  device_backward.py  gaussian_fit.py  m2_drain_ipc.py  m2_indexed_reduce.py  m2_scatter_gather.py  render_gaussians_2d.py  sfpu_raster.py  sfpu_raster_multitile.py  sfpu_raster_scaled.py  train2d_densify.py  train2d_verify.py  train3d.py
scratchpad/: bench_S2.py  perf_resident.py  probe_E1_readback.py  probe_E2_reduce_precision.py  probe_E3_owner_reduce.py  probe_E4_inbox_sizing.py  probe_E5_l1_param_stream.py  probe_S0_depthbucket.py  probe_S1_tile_assign.py  probe_S2_dev_countsort.py  probe_S2_dev_inc2.py  probe_S2_tile_reduce.py  probe_matmul_reduce.py  prof_projection.py  profile_resident.py  proto_R1_tileblock_fwd.py  proto_R2_tileblock_bwd.py  proto_S2_countsort.py  proto_S2_inkernel_reduce.py  proto_bwd_kernel.py  proto_bwd_kloop.py  proto_bwd_kloop2.py  proto_fp32_spike.py  proto_proj_bwd.py  proto_recon_bwd.py  proto_refuse.py  proto_sfpu_matmul_coexist.py  proto_tilevm.py  ramp_virus.py  ramp_virus2.py  smoke_recip.py  smoke_reduce.py  test_R3_integration.py  test_S4_argpack.py  test_adam.py  test_color.py  test_color_fused.py  test_color_trace.py  test_conv64.py  test_device_converge.py  (+22 more)
server/: backend.py  densify.py  device_adam.py  device_binsort.py  device_project.py  device_project_backward.py  device_raster.py  device_resident.py  dssim_device.py  fused_backward.py  loss.py  pose_opt.py  profiler.py  proj_fused.py  raster_blocked.py  render_device.py  serve_blackhole.py  tilealloc.py  train_tt.py
ttgs/: __init__.py  cli.py  config.py  pipeline.py  tools.py
ttgs/backend/: __init__.py  detect.py  monitor.py  tt_monitor.py
ttgs/stages/: __init__.py  export.py  extract.py  sfm.py  train.py  train_gsplat.py
ttgs/viewer/: __init__.py  dashboard.py  pipeline_controller.py  serve.py
ttgs/viewer/static/: base.css  base.js  components.js  drive.js  pose3d.js  splat.js
ttgs/viewer/templates/: dashboard.html  densify.html  gallery.html  image_edit.html  pose.html  training.html
work/frames/: frames.json
work/scene/: images
work/scene/sparse/0/: cameras.txt  frames.txt  points3D.txt
work/tt_out/: splat.ply
