[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ttgs"
version = "0.1.0"
description = "Gaussian Splatting pipeline for Tenstorrent Blackhole (tt-splat) — forked from arcgs"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["gaussian-splatting", "3dgs", "tenstorrent", "blackhole", "3d-reconstruction"]
authors = [{ name = "tt-splat contributors" }]

# Core deps — everything the Blackhole training path (`ttgs blackhole`) and the CLI need.
# All of these are already present in the tt-metal python_env venv, so `pip install -e .`
# there installs nothing extra and never touches the tt-metal torch/ttnn build.
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "requests>=2.32",
    "numpy>=1.26",
    "Pillow>=10",
    "tqdm>=4.66",
    "torch>=2.6",
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version < '3.11'",
    "packaging",
    # Dashboard: interactive training monitor (render vs GT vs diff, mask painter, pruning).
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Optional CPU/CUDA gsplat reference path (`ttgs train`/`run`) + viser viewer (`ttgs view`).
# NOT needed for `ttgs blackhole`. Install with:  pip install -e '.[reference]'
# WARNING: on the tt-metal venv, installing gsplat may pull a different torch — only add this
# if you specifically want the host gsplat path, ideally in a separate venv.
reference = [
    "gsplat>=1.0",
    "viser>=0.2",
]

[project.scripts]
ttgs = "ttgs.cli:app"

[project.urls]
Homepage = "https://github.com/tenstorrent/tt-splat"
Issues = "https://github.com/tenstorrent/tt-splat/issues"

[tool.hatch.build.targets.wheel]
packages = ["ttgs"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
